--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -228,7 +228,7 @@
       <item row="7" column="1">
        <widget class="QLabel" name="airbrushPreview">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="text">
          <string/>
